src/test/ui/overloaded-calls-nontuple.stderr
error[E0059]: cannot use call notation; the first type parameter for the function trait is neither a tuple nor unit
  --> $DIR/overloaded-calls-nontuple.rs:26:10
   |
LL |     drop(s(3))
   |          ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0059`.
